k8s/app-base.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: app
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: app
    spec:
      containers:
        - image: lucasmedeirosleite/soundplace:latest
          imagePullPolicy: Always
          name: app
          resources:
            limits:
              memory: "512Mi"
              cpu: "300m"
          ports:
            - containerPort: 4000
              name: phx
          command: ["mix", "phx.server"]
