k8s/app.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: sound-place-app
spec:
  replicas: 3
  template:
    metadata:
      labels:
        name: sound-place-app
    spec:
      containers:
        - image: CHANGE-HERE
          imagePullPolicy: Always
          name: sound-place-app
          resources:
            limits:
              memory: "512Mi"
              cpu: "300m"
          ports:
            - containerPort: 4000
              name: phx
          command: ["mix", "phx.server"]
