k8s/app-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  tls:
    - secretName: tls-certificate
  rules:
  - host: api-soundplace.com
    http:
      paths:
      - path: /
        backend:
          serviceName: app
          servicePort: 80
